# longmode

./: .gitignore  CMakeLists.txt  init.asm  link.ld  main.cpp
iso/boot/: lmode.elf
iso/boot/grub/: grub.cfg
